# mle-training

./: .gitignore  README.md  code.py  code_1.py  commands.txt  docker_script  env.yml  nonstandardcode.py  pyproject.toml  settings.json  setup.cfg  setup.py
Docker_container/Docker_container/: Dockerfile
Docker_container/Docker_container/house_price_prediction/: data_ingest.py  logger_01.py  main.py  model_scoring.py  model_training.py
_vendor/tigerml/automl/: README.md  core.py
docs/source/: conf.py  index.rst  modules.rst
housing.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
mletraining.egg-info/: PKG-INFO
mlruns/.trash/303835127358720169/: meta.yaml
mlruns/.trash/542073505000106754/: meta.yaml
mlruns/.trash/630450132542434996/: meta.yaml
mlruns/0/: meta.yaml
mlruns/0/7d529371d70346c9bf647790475f8535/: meta.yaml
mlruns/0/aa0196ca41044de1b4d046638500d234/: meta.yaml
mlruns/0/d3a62e730ac643b786b8345c5eef1680/: meta.yaml
mlruns/0/d69f7646082646868d818b78c17d3fb9/: meta.yaml
mlruns/217682766911627629/: meta.yaml
mlruns/217682766911627629/713603dfeb5f4bbfac098ea1e3da3915/: meta.yaml
mlruns/217682766911627629/7b5a9d798d3546b9af933c4021155029/: meta.yaml
mlruns/249066851450385923/: meta.yaml
mlruns/846532664682900716/: meta.yaml
mlruns/983633963726086629/: meta.yaml
mlruns/991869434736613241/: meta.yaml
notebooks/: MLCode-Refactor.ipynb  MLE-Training Housing.ipynb  MLFlow-Housing.ipynb  Parent Child Run MLFlow.ipynb  main.py
src/housing/: ingest_data.py  logger.py  score.py  train.py
tests/: test_inputs.py
(+532 files in other folders)
