[project]
name = "mletraining"
version = "0.1.12"
authors = [
  { name="saikiran3944", email="saikiran.badugu@tigeranalytics.com" },
]
description = "This is basic package to get the basic functionality on housing data"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/saikiran3944/mle-training"
Issues = "https://github.com/saikiran3944/mle-training/issues"