[metadata]
name = housing
version = 0.2
author = Saikiran
description="Modelling housing data.",
url="https://github.com/saikiran3944/mle-training"
keywords = setuptools
[options]
python_requires = >=3.7, <4
install_requires = 
    pandas
[options.extras_require]
test = 
    pytest
    coverage
tools = 
    isort
    black
    flake8
